AddArticle, added updateTotal() in Articles class

--- a/Angular/Factures/src/app/article/article.component.html
+++ b/Angular/Factures/src/app/article/article.component.html
@@ -1,5 +1,5 @@
 <div>
-    <label> Article: 
+    <label> Article:
 
     <div class="formBoxRows">
       <select type="number" [(ngModel)]="selectedArticle" name="articleSelect" id="titleClass">
@@ -8,10 +8,10 @@
       <button (click)="addArticle()" id="addArticle">+</button>
     </div>
     </label>
-    
+
 </div>
 
-<div *ngIf="selectedArticlesArray">
+<div *ngIf="articles.articles">
 <h2>Articles</h2>
 <table name="myTable">
   <tr>
@@ -21,10 +21,10 @@
     <th>Preu</th>
     <th>Total</th>
   </tr>
-  <tr *ngFor="let article of selectedArticlesArray;">
-    <td class="codi">{{article.codi}}</td> 
+  <tr *ngFor="let article of articles.articles;">
+    <td class="codi">{{article.codi}}</td>
     <td class="name">{{article.nom}}</td>
-    <td class="name"><input type="number" [(ngModel)]="article.quantitat" (ngModelChange)="updateTotal(article)" value="{{article.quantitat}}"></td>
+    <td class="name"><input min="0" id="{{article.codi}}_quantitat"type="number" (change)="updateTotal(article)" value="{{article.quantitat}}"></td>
     <td class="name">{{article.preu}}</td>
     <td class="name">{{article.total}}</td>
  </tr>
