Added shuffle in row constructor && added button in playboard card

--- a/MemoryWithAngular/Memory/src/app/playboard/playboard.component.html
+++ b/MemoryWithAngular/Memory/src/app/playboard/playboard.component.html
@@ -1,6 +1,6 @@
 <p>playboard works!</p>
 <table *ngFor="let cardsRow of playboard?.board; let i = index">
-    <tr *ngFor="let card of cardsRow.row; let i = index">
-        {{card.num}}
-    </tr>
+    <td *ngFor="let card of cardsRow.row; let i = index">
+        <button>{{card.num}}</button>
+    </td>
 </table>
