--- a/MemoryWithAngular/Memory/src/app/playboard/playboard.component.html
+++ b/MemoryWithAngular/Memory/src/app/playboard/playboard.component.html
@@ -1,6 +1,13 @@
 <p>playboard works!</p>
+
+Files: <input type="number" [(ngModel)]="row"><br>
+Columnes: <input type="number"  [(ngModel)]="column"><br>
+<button (click)="generateBoard()">Generar tablero</button>
 <table *ngFor="let cardsRow of playboard?.board; let i = index">
     <td *ngFor="let card of cardsRow.row; let i = index">
-        <button>{{card.num}}</button>
+      <app-card
+      [card]="card"
+      (clicked)="handleCardClick($event)"
+    ></app-card>
     </td>
 </table>
