--- a/MemoryWithAngular/Memory/src/app/card/card.component.css
+++ b/MemoryWithAngular/Memory/src/app/card/card.component.css
@@ -7,6 +7,7 @@
 }
 
 .front {
+  margin: 0px;
   height: 140px;
   width: 100px;
   left: 0;
@@ -19,6 +20,8 @@
 
 .transparent {
   opacity: 0;
+  height: 140px;
+  width: 100px;
 }
 
 .back {
