Rubrica atencio al client feta

--- a/UF2/P5_Valoració-d'atenció-al-client/rubrica-atencio-client/src/app/project/components/formGenerator/form-generator/form-generator.component.css
+++ b/UF2/P5_Valoració-d'atenció-al-client/rubrica-atencio-client/src/app/project/components/formGenerator/form-generator/form-generator.component.css
@@ -43,10 +43,15 @@ h1 {
 
 td.delete_row {
   text-align: center;
-  min-width: 5px;
+  min-width: 30px;
 }
 
 .delete_row:hover {
   color: red;
   cursor:pointer;
 }
+
+.empty {
+  background-color: red;
+}
+
