--- a/UF2/P5_Valoració-d'atenció-al-client/rubrica-atencio-client/src/app/app.component.html
+++ b/UF2/P5_Valoració-d'atenció-al-client/rubrica-atencio-client/src/app/app.component.html
@@ -1,2 +1,10 @@
-
-<app-form-generator></app-form-generator>
+<h1>Angular Router App</h1>
+<!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
+<nav>
+  <ul>
+    <li><a routerLink="/form-visualizer" routerLinkActive="active" ariaCurrentWhenActive="page">Visualize the form</a></li>
+    <li><a routerLink="/form-generator" routerLinkActive="active" ariaCurrentWhenActive="page">Create the form</a></li>
+  </ul>
+</nav>
+<!-- The routed views render in the <router-outlet>-->
+<router-outlet></router-outlet>
